<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_flip"
        android:enabled="true"
        android:icon="@drawable/flip"
        android:orderInCategory="101"
        android:title="@string/menu_flip"
        android:titleCondensed="@string/menu_flip_short"
        android:visible="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_reset"
        android:enabled="true"
        android:icon="@drawable/reset"
        android:orderInCategory="100"
        android:title="@string/menu_reset"
        android:titleCondensed="@string/menu_reset_short"
        android:visible="true"
        app:showAsAction="never"/>
</menu>
