<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="stats"
            type="com.viktordikov.betrayalcharacterstats.Data.CharacterStats"/>
    </data>

    <RelativeLayout
        android:id="@+id/rlCharacter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/dscr_character_info"
        android:gravity="top|left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvAgeLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvAge"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/char_info_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/age" />

        <TextView
            android:id="@id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/tvAgeLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:text="@{stats.ageString}" />

        <TextView
            android:id="@+id/tvHeightLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvHeight"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tvAge"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/height" />

        <TextView
            android:id="@id/tvHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/tvHeightLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:text="@{stats.height}" />

        <TextView
            android:id="@+id/tvWeightLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvWeight"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tvHeight"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/weight" />

        <TextView
            android:id="@id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/tvWeightLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:text="@{stats.weightString}" />

        <TextView
            android:id="@+id/tvLbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvWeight"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/tvWeight"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/lbs" />

        <TextView
            android:id="@+id/tvHobbiesLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvHobbies"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/char_info_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/hobbies" />

        <TextView
            android:id="@id/tvHobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAge"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/tvHobbiesLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:text="@{stats.hobbies}" />

        <TextView
            android:id="@+id/tvBirthdayLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvBirthday"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/char_info_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/birthday" />

        <TextView
            android:id="@id/tvBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHobbies"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/tvBirthdayLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:text="@{stats.birthday}" />

        <TextView
            android:id="@+id/tvMightLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvMight"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/char_info_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/might" />

        <TextView
            android:id="@id/tvMight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBirthday"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/tvMightLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@{stats.might == stats.mightDefault ? @color/green : @color/white}"
            android:text="@{stats.mightString}" />

        <TextView
            android:id="@+id/tvSanityLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvSanity"
            android:layout_toLeftOf="@id/tvSanity"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/sanity" />

        <TextView
            android:id="@id/tvSanity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvBirthday"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="@dimen/char_info_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@{stats.sanity == stats.sanityDefault ? @color/green : @color/white}"
            android:text="@{stats.sanityString}" />

        <TextView
            android:id="@+id/tvSpeedLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvSpeed"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/char_info_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/speed" />

        <TextView
            android:id="@id/tvSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMight"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/tvSpeedLbl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@{stats.speed == stats.speedDefault ? @color/green : @color/white}"
            android:text="@{stats.speedString}" />

        <TextView
            android:id="@+id/tvKnowledgeLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvKnowledge"
            android:layout_toLeftOf="@id/tvKnowledge"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/lightGray"
            android:text="@string/knowledge" />

        <TextView
            android:id="@id/tvKnowledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/char_info_horizontal_margin"
            android:layout_below="@id/tvSanity"
            android:layout_marginLeft="3dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@{stats.knowledge == stats.knowledgeDefault ? @color/green : @color/white}"
            android:text="@{stats.knowledgeString}" />

    </RelativeLayout>
</layout>